--- a/assets/stylesheets/less/partials/modal.less
+++ b/assets/stylesheets/less/partials/modal.less
@@ -171,7 +171,7 @@
     .position(fixed, @left: 0);
     .size(@width: 500px, @height: 500px);
     opacity: 1;
-    z-index: 40;
+    z-index: @z-index-modal;
     display: none;
     overflow: visible;
     box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.2);
@@ -1510,7 +1510,7 @@ html.microsoft {
             .center-align;
             .position(absolute);
             margin-top: 15px;
-            z-index: 40;
+            z-index: @z-index-modal;
 
             .label {
                 float: left;
