--- a/assets/stylesheets/less/partials/table.less
+++ b/assets/stylesheets/less/partials/table.less
@@ -601,7 +601,7 @@ html.edge {
 
         th.modalHighlighted {
             .header {
-                z-index: 40;
+                z-index: @z-index-modal;
             }
             .flexContainer{
                 background-color: @color-bg-select-blue;
@@ -695,7 +695,7 @@ html.edge {
                         display: block;
                         position: absolute;
                         background-color: rgba(0,0,0,1);
-                        z-index: 40;
+                        z-index: @z-index-modal;
                         opacity: 0.3;
                         width: ~"calc(100% + 10px)";
                         height: @height-xcColHeaderOuter;
@@ -844,19 +844,19 @@ html.edge {
             pointer-events: all;
             border-color: @color-table-border-darkened !important;
             position: relative;
-            z-index:36;
+            z-index: @z-index-modalBackground + 1;
         }
 
         .header {
-            z-index: 37;
+            z-index: @z-index-modalBackground + 2;
         }
 
         th:first-child .header {
-            z-index: 38;
+            z-index: @z-index-modalBackground + 3;
         }
 
         .idWrap {
-            z-index: 37;
+            z-index: @z-index-modalBackground + 2;
             pointer-events: none;
             .idSpan::after {
                 display: block;
@@ -875,7 +875,7 @@ html.edge {
             display: block;
             content: "";
             background-color: rgb(0,0,0);
-            z-index: 36;
+            z-index: @z-index-modalBackground + 1;
             opacity: 0.3;
             display: none;
             // jquery fades in display
@@ -1153,7 +1153,7 @@ html.edge {
         &.jsonModalOpen {
             border-color: @color-table-border-gray !important;
             position: relative;
-            z-index:36;
+            z-index: @z-index-modalBackground + 1;
             &:not(.jsonElement) {
                 pointer-events: none;
             }
